--- a/js1update.html
+++ b/js1update.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1>Simply drag the links to your bookmark to get the update!(Delete old scripts/bookmarks before doing this)</h1>
-<a href='function loadXMLDoc() {var xmlhttp = new XMLHttpRequest();xmlhttp.onreadystatechange = function() {if (this.readyState == 4 && this.status == 200) {window.resp =this.responseText;}};xmlhttp.open("GET", "https://raw.githubusercontent.com/AustinJackS/dev-channel/gh-page/bgcolor.txt", true);xmlhttp.send();}function ldcd() {eval(window.resp);}loadXMLDoc();ldcd();'>Background Color</a>
+<a href='javascript:function loadXMLDoc() {var xmlhttp = new XMLHttpRequest();xmlhttp.onreadystatechange = function() {if (this.readyState == 4 && this.status == 200) {window.resp =this.responseText;}};xmlhttp.open("GET", "https://raw.githubusercontent.com/AustinJackS/dev-channel/gh-page/bgcolor.txt", true);xmlhttp.send();}function ldcd() {eval(window.resp);}loadXMLDoc();ldcd();'>Background Color</a>
 </body>
 </html>
