--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
 <h1>Good old links, just cooler!</h1>
 <a href="js1update.html">The newest js update for bothbackground changers!</a>
-  <a href="worm-diep.user.js">Wormax/Diep hack</a>
+  <a href="worm-deip.user.js">Wormax/Diep hack</a>
 </body>
 </html>
