--- a/ajx.html
+++ b/ajx.html
@@ -1,7 +1,9 @@
 <html>
 <body>
+<div id="demo">
 <h1>New AJAX API for javascript!</h1>
 <button type="button" onclick="loadDoc();useAjax()">Change Content</button>
+</div>
 <div class="nscript" style="visibility: hidden">
 
 ajax("GET", "https://austinjacks.github.io/dev-channel/tmpr.txt", true)$ajax
