--- a/ajx.html
+++ b/ajx.html
@@ -1,5 +1,23 @@
 <html>
 <body>
+<h3>From:function loadDoc() {
+  var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+      document.getElementById("demo").innerHTML =
+      this.responseText;
+    }
+  };
+  xhttp.open("GET", "ajax_info.txt", true);
+  xhttp.send();
+}
+  </h3>
+  <br>
+  <h3>
+    To:
+    ajax("GET", "https://austinjacks.github.io/dev-channel/tmpr.txt", true)$ajax
+  </h3>
+  
 <div id="demo">
 <h1>New AJAX API for javascript!</h1>
 <button type="button" onclick="loadDoc();useAjax()">Change Content</button>
