--- a/ajx.html
+++ b/ajx.html
@@ -15,7 +15,7 @@
   <br>
   <h3>
     To:
-    ajax("GET", "https://austinjacks.github.io/dev-channel/tmpr.txt", true)$ajax
+    ajax("GET", "https://austinjacks.github.io/dev-channel/ajx2.html", true)$ajax
   </h3>
   
 <div id="demo">
