--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <body>
 <h1>Good old links, just cooler!</h1>
 <a href="js1update.html">The newest js update for bothbackground changers!</a>
+  <br>
+<a href="ajx.html">my ajax api!</a>  
 </body>
 </html>
