--- a/ajx.html
+++ b/ajx.html
@@ -8,7 +8,7 @@
       this.responseText;
     }
   };
-  xhttp.open("GET", "ajax_info.txt", true);
+  xhttp.open("GET", "ajax2.html", true);
   xhttp.send();
 }
   </h3>
@@ -24,7 +24,7 @@
 </div>
 <div class="nscript" style="visibility: hidden">
 
-ajax("GET", "https://austinjacks.github.io/dev-channel/tmpr.txt", true)$ajax
+ajax("GET", "https://austinjacks.github.io/dev-channel/ajx2.html", true)$ajax
 
 </div>
 <script>
