--- a/ajx.html
+++ b/ajx.html
@@ -27,9 +27,13 @@
 ajax("GET", "https://austinjacks.github.io/dev-channel/ajx2.html", true)$ajax
 
 </div>
-<script src="https://austinjacks.github.io/njs/njs.js"></script>
 <script>
-  njinit();
+  var nscode = document.getElementsByClassName('nscript')[0].innerHTML
+  nscode = nscode.replace('ajax','function loadDoc() {var xhttp = new XMLHttpRequest();xhttp.onreadystatechange = function() {if (this.readyState == 4 && this.status == 200) {window.ajaxresp = this.responseText;}};xhttp.open');
+  nscode = nscode.replace('$ajax',';xhttp.send();}');
+  document.getElementsByClassName('nscript')[0].innerHTML = nscode;
+  nsinit = new Function(nscode);
+  nsinit();
   </script>
 <div class="marker"></div>
 <script>
