--- a/ajx.html
+++ b/ajx.html
@@ -28,11 +28,14 @@ ajax("GET", "https://austinjacks.github.io/dev-channel/ajx2.html", true)$ajax
 
 </div>
 <script>
-  var nscode = document.getElementsByClassName('nscript')[0].innerHTML
+function nsinit(cnum) {
+  var nscode = document.getElementsByClassName('nscript')[cnum].innerHTML
   nscode = nscode.replace('ajax','function loadDoc() {var xhttp = new XMLHttpRequest();xhttp.onreadystatechange = function() {if (this.readyState == 4 && this.status == 200) {window.ajaxresp = this.responseText;}};xhttp.open');
   nscode = nscode.replace('$ajax',';xhttp.send();}');
   document.getElementsByClassName('nscript')[0].innerHTML = nscode;
   eval(nscode);
+}
+nsinit(0);
   </script>
 <div class="marker"></div>
 <script>
